--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </section>
     </main>
     <footer>
-      <p>&copy; 2023 My Page. All rights reserved.</p>
+      <p>&copy; 2023 Vikram. All rights reserved.</p>
     </footer>
   </body>
 </html>
