--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <ul>
           <li>Anime and code.</li>
         </ul>
-        <h3>Let's Connect</h3>
+        <h3>Let's Connect, Uhohohoooo</h3>
 
         <a
           target="_blank"
