--- a/index.html
+++ b/index.html
@@ -1,130 +1,163 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>My Personal Website</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
-
-    <link rel="stylesheet" href="https://unpkg.com/@sakun/system.css" />
-    <link rel="stylesheet" href=" <link rel="stylesheet" href="
+    <title>Vikram</title>
+    <link type="text/css" rel="stylesheet" href="./src/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap"
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script
-      src="https://kit.fontawesome.com/f2bdb230f0.js"
-      crossorigin="anonymous"
-    ></script>
-    <style>
-      :root {
-        background-color: #372f44;
-      }
-      header {
-        background: linear-gradient(
-          to bottom right,
-          rgb(255, 0, 81),
-          rgb(255, 238, 0)
-        );
-        color: white;
-        text-align: center;
-        padding: 1rem;
-        width: 100%;
-      }
-      main {
-        padding: 20px;
-        background-color: #372f44;
-        color: antiquewhite;
-      }
-      body {
-        background-color: #372f44;
-      }
-      section {
-        margin-bottom: 20px;
-      }
-      footer {
-        background: linear-gradient(
-          to bottom right,
-          rgb(255, 0, 81),
-          rgb(255, 238, 0)
-        );
-        color: white;
-        text-align: center;
-        padding: 1rem;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-      }
-      .fa {
-        /* padding: 20px; */
-        font-size: 30px;
-        width: 50px;
-        text-align: center;
-        text-decoration: none;
-        margin: 5px 2px;
-      }
-
-      .fa:hover {
-        opacity: 0.7;
-      }
-
-      .fa-twitter {
-        color: antiquewhite;
-      }
-      .fa-linkedin {
-        color: antiquewhite;
-      }
-      .fa-github {
-        color: antiquewhite;
-      }
-      .fa-cloud {
-        color: antiquewhite;
-      }
-    </style>
   </head>
-  <body style="font-family: monospace, sans-serif; margin: 0; padding: 0">
-    <header>
-      <h1>Welcome to My Page</h1>
+  <body>
+    <header class="hero flex-justify-center">
+      <p>MOOSH MOOSH!!</p>
+      <h1>Oreva, <span>Monkey.D.Luffy </span></h1>
+      <p>Kizokk Ninaru</p>
+      <a href="#contact">Get in touch</a>
     </header>
-    <main>
-      <section>
-        <h2>About Me</h2>
-        <p>Orewa Luffy, Kaizokk ninaru hotukada.</p>
-      </section>
-      <section>
-        <h2>My Interests</h2>
-        <ul>
-          <li>Anime and code.</li>
-        </ul>
-        <h3>Let's Connect, Uhohohoooo</h3>
 
-        <a
-          target="_blank"
-          title="let's go"
-          href="https://twitter.com/ItsveerZ"
-          class="fa fa-twitter"
-        ></a>
-        <a
-          title="ikaa zoo"
-          target="_blank"
-          href="https://www.linkedin.com/in/veervikram-singh-569529218/"
-          class="fa fa-linkedin"
-        ></a>
-        <a
-          title="Chaliye shuru karte hain."
-          target="_blank"
-          href="https://github.com/Vikramop"
-          class="fa fa-github"
-        ></a>
-        <a
-          title="To kaise hain aap log?"
-          target="_blank"
-          href="https://vikk.hashnode.dev/"
-        >
-          <i class="fa fa-cloud"></i>
-        </a>
-      </section>
-    </main>
-    <footer>
+    <section class="about">
+      <h2 class="section-title a2">Who am I ?</h2>
+      <p class="text-align-center abouth">
+        I am a front-End web developer with over a year of experience. I have a
+        passion for building high-quality, user-friendly web applications. I am
+        also a strong advocate for open source software and continuous learning.
+      </p>
+
+      <div class="about-content flex-justify-center">
+        <article class="flex-center text-align-center">
+          <h3>🏗️Building and Breaking stuff</h3>
+          <p>
+            Love avid engineering problems. Like breaking code and fixing them.
+          </p>
+
+          <h3>📖Languages I know</h3>
+          <p>HTML, CSS , JavaScript</p>
+
+          <h3>Dev Tools I use</h3>
+          <ul>
+            <li>VS Code</li>
+            <li>Git</li>
+            <li>Bootstrap</li>
+          </ul>
+        </article>
+        <div class="a1"></div>
+        <article class="flex-center text-align-center">
+          <h3>🖌️Design and 🎨Canvas</h3>
+          <p>
+            Some times I hold my mouse as a paint brush and bring colors to
+            life.
+          </p>
+
+          <h3>😎My design Expertise</h3>
+          <p>UI/UX, User Research , User Feedback</p>
+
+          <h3>Design Tools I use</h3>
+          <ul>
+            <li>Figma</li>
+            <li>Photoshop</li>
+            <li>Sketch</li>
+          </ul>
+        </article>
+      </div>
+    </section>
+
+    <section class="crafts">
+      <h2 class="section-title">My Works!</h2>
+      <div class="cards">
+        <card class="card">
+          <img
+            src="https://imgs.search.brave.com/WYVkW9-28PAbRO69b-so0KiFMh4wgr2snAYJqySvE4g/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9yb2hp/dGxha2hvdGlhLmNv/bS9jb250ZW50L2lt/YWdlcy8yMDIxLzA3/L3N0YWNrb3ZlcmZs/b3ctd2l0aENTUy5w/bmc"
+          />
+          <div class="card-body">
+            <h3>Awesome project</h3>
+            <p>Description of the awesome project</p>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Bootstrap</li>
+            </ul>
+          </div>
+        </card>
+        <card class="card">
+          <img
+            src="https://imgs.search.brave.com/WYVkW9-28PAbRO69b-so0KiFMh4wgr2snAYJqySvE4g/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9yb2hp/dGxha2hvdGlhLmNv/bS9jb250ZW50L2lt/YWdlcy8yMDIxLzA3/L3N0YWNrb3ZlcmZs/b3ctd2l0aENTUy5w/bmc"
+          />
+          <div class="card-body">
+            <h3>Awesome project</h3>
+            <p>Description of the awesome project</p>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Bootstrap</li>
+            </ul>
+          </div>
+        </card>
+        <card class="card">
+          <img
+            src="https://imgs.search.brave.com/WYVkW9-28PAbRO69b-so0KiFMh4wgr2snAYJqySvE4g/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9yb2hp/dGxha2hvdGlhLmNv/bS9jb250ZW50L2lt/YWdlcy8yMDIxLzA3/L3N0YWNrb3ZlcmZs/b3ctd2l0aENTUy5w/bmc"
+          />
+          <div class="card-body">
+            <h3>Awesome project</h3>
+            <p>Description of the awesome project</p>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Bootstrap</li>
+            </ul>
+          </div>
+        </card>
+      </div>
+    </section>
+
+    <div class="experience">
+      <h2 class="section-title">Over the Years!</h2>
+      <div class="experience-card">
+        <ul>
+          <li>
+            <time>Feb 2022 - 2023</time>
+            <h3>UX Engineer</h3>
+            <p>Crafting prototypes raning from production to experiments.</p>
+          </li>
+          <li>
+            <time>Dec 2018 - Jan 2022</time>
+            <h3>Web Developer</h3>
+            <p>Creating web application for vaying business solutions</p>
+          </li>
+          <li>
+            <time>July 2017 - Aug 2017</time>
+            <h3>Software Engineer</h3>
+            <p>Designed Pricing module of finance app.</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- <div class="contact" id="contact">
+      <h2 class="section-title">Wanna Connect!</h2>
+      <div class="contact-card">
+        <div class="article-container">
+          <article>
+            <h3>Phone Number</h3>
+            <a href="tel:+919898989898">+91-9898989898</a>
+          </article>
+          <article>
+            <h3>Email</h3>
+            <a href="mailto:me@example.com">me@example.com</a>
+          </article>
+        </div>
+        <ul>
+          <li><a href="https://instagram.com/example">Instagram</a></li>
+          <li><a href="https://twitter.com/example">Twitter</a></li>
+          <li><a href="https://linkedin.com/in/example">LinkedIn</a></li>
+        </ul>
+      </div>
+    </div> -->
+
+    <footer class="flex-justify-center footer">
       <p>&copy; 2023 Vikram. All rights reserved.</p>
     </footer>
   </body>
