--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <title>Vikram</title>
     <link type="text/css" rel="stylesheet" href="./src/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap"
-      rel="stylesheet"
-    />
+    <!-- <link rel="stylesheet" href="https://unpkg.com/@sakun/system.css" /> -->
+    <script
+      src="https://kit.fontawesome.com/f2bdb230f0.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="hero flex-justify-center">
@@ -136,26 +135,36 @@
       </div>
     </div>
 
-    <!-- <div class="contact" id="contact">
-      <h2 class="section-title">Wanna Connect!</h2>
-      <div class="contact-card">
-        <div class="article-container">
-          <article>
-            <h3>Phone Number</h3>
-            <a href="tel:+919898989898">+91-9898989898</a>
-          </article>
-          <article>
-            <h3>Email</h3>
-            <a href="mailto:me@example.com">me@example.com</a>
-          </article>
-        </div>
-        <ul>
-          <li><a href="https://instagram.com/example">Instagram</a></li>
-          <li><a href="https://twitter.com/example">Twitter</a></li>
-          <li><a href="https://linkedin.com/in/example">LinkedIn</a></li>
-        </ul>
+    <div class="contact" id="contact">
+      <h3>Let's Connect, Uhohohoooo💀</h3>
+      <div class="clink">
+        <a
+          target="_blank"
+          title="let's go"
+          href="https://twitter.com/ItsveerZ"
+          class="fa fa-twitter"
+        ></a>
+        <a
+          title="ikaa zoo"
+          target="_blank"
+          href="https://www.linkedin.com/in/veervikram-singh-569529218/"
+          class="fa fa-linkedin"
+        ></a>
+        <a
+          title="Chaliye shuru karte hain."
+          target="_blank"
+          href="https://github.com/Vikramop"
+          class="fa fa-github"
+        ></a>
+        <a
+          title="To kaise hain aap log?"
+          target="_blank"
+          href="https://vikk.hashnode.dev/"
+        >
+          <i class="fa fa-cloud"></i>
+        </a>
       </div>
-    </div> -->
+    </div>
 
     <footer class="flex-justify-center footer">
       <p>&copy; 2023 Vikram. All rights reserved.</p>
